--- a/src/01_env.ipynb
+++ b/src/01_env.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:43:10.882322Z",
@@ -39,7 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "env_name = 'CartPole-v0'\n",
+    "env_name = 'CartPole-v1'\n",
     "env = gym.make(env_name)"
    ]
   },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:36:42.119972Z",
@@ -82,10 +82,10 @@
     {
      "data": {
       "text/plain": [
-       "<TimeLimit<OrderEnforcing<PassiveEnvChecker<CartPoleEnv<CartPole-v0>>>>>"
+       "<TimeLimit<OrderEnforcing<PassiveEnvChecker<CartPoleEnv<CartPole-v1>>>>>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:36:49.966685Z",
@@ -110,7 +110,7 @@
        "Discrete(2)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:37:07.789565Z",
@@ -132,10 +132,10 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:37:20.687378Z",
@@ -160,7 +160,7 @@
        "Box([-4.8000002e+00 -3.4028235e+38 -4.1887903e-01 -3.4028235e+38], [4.8000002e+00 3.4028235e+38 4.1887903e-01 3.4028235e+38], (4,), float32)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:37:36.789515Z",
@@ -186,7 +186,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:37:46.991799Z",
@@ -212,7 +212,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:37:55.306094Z",
@@ -234,11 +234,11 @@
     {
      "data": {
       "text/plain": [
-       "array([ 2.0086868e+00, -3.0440923e+37,  6.7902550e-02, -3.1021706e+38],\n",
+       "array([-5.1038988e-02,  5.5534125e+37,  3.4973854e-01, -2.4954501e+38],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:40:48.246501Z",
@@ -295,8 +295,8 @@
       "\u001b[0m            \u001b[0mtruncated\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\n",
       "\u001b[0m\u001b[1;33m\n",
       "\u001b[0m        \u001b[1;32mreturn\u001b[0m \u001b[0mobservation\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreward\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mterminated\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtruncated\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minfo\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFile:\u001b[0m      c:\\software\\anaconda\\envs\\ml\\lib\\site-packages\\gym\\wrappers\\time_limit.py\n",
-      "\u001b[1;31mType:\u001b[0m      method\n"
+      "\u001b[1;31mFile:\u001b[0m      d:\\software\\anaconda\\envs\\dl\\lib\\site-packages\\gym\\wrappers\\time_limit.py\n",
+      "\u001b[1;31mType:\u001b[0m      method"
      ]
     }
    ],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:41:52.201203Z",
@@ -315,14 +315,10 @@
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32md:\\VSCode_project\\Reinforcement_Learning\\src\\01_env.ipynb 单元格 17\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/VSCode_project/Reinforcement_Learning/src/01_env.ipynb#X22sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     env\u001b[39m.\u001b[39mrender()\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/VSCode_project/Reinforcement_Learning/src/01_env.ipynb#X22sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     action \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39maction_space\u001b[39m.\u001b[39msample()\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/VSCode_project/Reinforcement_Learning/src/01_env.ipynb#X22sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     observation, reward, done, info \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mstep(action)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/VSCode_project/Reinforcement_Learning/src/01_env.ipynb#X22sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     score \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m reward\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/VSCode_project/Reinforcement_Learning/src/01_env.ipynb#X22sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mtotal reward: \u001b[39m\u001b[39m{\u001b[39;00mscore\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 4)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total reward: 22.0\n"
      ]
     }
    ],
@@ -334,14 +330,14 @@
     "while not done:\n",
     "    env.render()\n",
     "    action = env.action_space.sample()\n",
-    "    observation, reward, done, info = env.step(action)\n",
+    "    observation, reward, done, truncated, info = env.step(action)\n",
     "    score += reward\n",
     "print(f'total reward: {score}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:43:16.749930Z",
@@ -350,14 +346,14 @@
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32md:\\VSCode_project\\Reinforcement_Learning\\src\\01_env.ipynb 单元格 18\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/VSCode_project/Reinforcement_Learning/src/01_env.ipynb#X23sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     env\u001b[39m.\u001b[39mrender()\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/VSCode_project/Reinforcement_Learning/src/01_env.ipynb#X23sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     action \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39maction_space\u001b[39m.\u001b[39msample()\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/VSCode_project/Reinforcement_Learning/src/01_env.ipynb#X23sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     observation, reward, done, info \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mstep(action)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/VSCode_project/Reinforcement_Learning/src/01_env.ipynb#X23sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     score \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m reward\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/VSCode_project/Reinforcement_Learning/src/01_env.ipynb#X23sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mepoch: \u001b[39m\u001b[39m{\u001b[39;00mepoch\u001b[39m}\u001b[39;00m\u001b[39m, total reward: \u001b[39m\u001b[39m{\u001b[39;00mscore\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 4)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 1, total reward: 17.0\n",
+      "epoch: 2, total reward: 13.0\n",
+      "epoch: 3, total reward: 13.0\n",
+      "epoch: 4, total reward: 50.0\n",
+      "epoch: 5, total reward: 61.0\n"
      ]
     }
    ],
@@ -370,7 +366,7 @@
     "    while not done:\n",
     "        env.render()\n",
     "        action = env.action_space.sample()\n",
-    "        observation, reward, done, info = env.step(action)\n",
+    "        observation, reward, done, truncated, info = env.step(action)\n",
     "        score += reward\n",
     "    print(f'epoch: {epoch}, total reward: {score}')"
    ]
@@ -399,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
