--- a/src/01_env.ipynb
+++ b/src/01_env.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:43:10.882322Z",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:36:42.119972Z",
@@ -85,7 +85,7 @@
        "<TimeLimit<OrderEnforcing<PassiveEnvChecker<CartPoleEnv<CartPole-v1>>>>>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:36:49.966685Z",
@@ -110,7 +110,7 @@
        "Discrete(2)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:37:07.789565Z",
@@ -135,7 +135,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:37:20.687378Z",
@@ -160,7 +160,7 @@
        "Box([-4.8000002e+00 -3.4028235e+38 -4.1887903e-01 -3.4028235e+38], [4.8000002e+00 3.4028235e+38 4.1887903e-01 3.4028235e+38], (4,), float32)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:37:36.789515Z",
@@ -186,7 +186,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:37:46.991799Z",
@@ -212,7 +212,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:37:55.306094Z",
@@ -234,11 +234,11 @@
     {
      "data": {
       "text/plain": [
-       "array([-5.1038988e-02,  5.5534125e+37,  3.4973854e-01, -2.4954501e+38],\n",
+       "array([ 2.2072785e+00, -9.3458910e+37, -7.7138759e-02, -3.7889585e+36],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:40:48.246501Z",
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:41:52.201203Z",
@@ -318,7 +318,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total reward: 22.0\n"
+      "total reward: 18.0\n"
      ]
     }
    ],
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-04T11:43:16.749930Z",
@@ -349,11 +349,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 1, total reward: 17.0\n",
-      "epoch: 2, total reward: 13.0\n",
-      "epoch: 3, total reward: 13.0\n",
-      "epoch: 4, total reward: 50.0\n",
-      "epoch: 5, total reward: 61.0\n"
+      "epoch: 1, total reward: 11.0\n",
+      "epoch: 2, total reward: 37.0\n",
+      "epoch: 3, total reward: 28.0\n",
+      "epoch: 4, total reward: 15.0\n",
+      "epoch: 5, total reward: 32.0\n"
      ]
     }
    ],
